♻️ migrate handlebars to new angle bracket syntax

--- a/lib/cli/src/frameworks/ember/app/templates/components/storybook-button.hbs
+++ b/lib/cli/src/frameworks/ember/app/templates/components/storybook-button.hbs
@@ -1,5 +1,5 @@
 <button type="button"
-    class="storybook-button {{if primary "storybook-button--primary" "storybook-button--secondary"}} storybook-button--{{size}}"
-    style="background-color:{{backgroundColor}};" onclick={{action onClick}}>
-    {{ label }}
+    class="storybook-button {{if this.primary "storybook-button--primary" "storybook-button--secondary"}} storybook-button--{{this.size}}"
+    style="background-color:{{backgroundColor}};" onclick={{this.onClick}}>
+    {{this.label}}
 </button>
